log/coach-update.log
=== Arena Coach Update === (Fri Jun 26 12:52:21 AM CEST 2026)
1. Coach binary...
Already up to date.
   updated (binary changed)
   Added new entry: edax.yaml
   Added new entry: egaroucid.yaml
   Added new entry: neural-reversi.yaml
   Added new entry: neursi.yaml

─── edax ───
   /home/oliv/dev/agent/othello-refs/coach-adapters/edax
   -> /home/oliv/coach/engines/ec76d24e1d984b3d/

─── egaroucid ───
   /home/oliv/dev/agent/othello-refs/coach-adapters/egaroucid
   ERROR: build failed for egaroucid
   Last 10 lines:
/home/oliv/dev/agent/othello-refs/egaroucid/src/src/engine/level.hpp:178:19: error: ‘g_mid_depth_override’ was not declared in this scope
  178 |         *depth = (g_mid_depth_override >= 0) ? g_mid_depth_override : level_status.mid_lookahead;
      |                   ^~~~~~~~~~~~~~~~~~~~
gmake[4]: *** [CMakeFiles/Egaroucid_for_Console.out.dir/build.make:79: CMakeFiles/Egaroucid_for_Console.out.dir/src/Egaroucid_for_Console.cpp.o] Error 1
gmake[3]: *** [CMakeFiles/Makefile2:87: CMakeFiles/Egaroucid_for_Console.out.dir/all] Error 2
gmake[2]: *** [CMakeFiles/Makefile2:94: CMakeFiles/Egaroucid_for_Console.out.dir/rule] Error 2
gmake[1]: *** [Makefile:124: Egaroucid_for_Console.out] Error 2
gmake[1]: Leaving directory '/home/oliv/dev/agent/othello-refs/egaroucid/src/build_coach'
ERROR: Egaroucid build failed
make: *** [Makefile:13: coach-build] Error 1
   Full log: /home/oliv/dev/agent/arena/log/.build-egaroucid.log

─── neural-reversi ───
   /home/oliv/dev/agent/othello-refs/coach-adapters/neural-reversi
   -> /home/oliv/coach/engines/0c7fa31b35c53f86/

─── neursi ───
   /home/oliv/dev/agent/neursi/engine
   -> /home/oliv/coach/engines/8389b9a0572783a4/

─── Reload ───
Coach binary was updated — restarting service...
Coach not running.

=== Done ===
9 players deployed from /home/oliv/coach/engines
ERROR: 1 engine build(s) failed — check the log for details
Log saved to: /home/oliv/dev/agent/arena/log/coach-update.log
